--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "Boilerplate SASS",
   "main": "index.js",
   "scripts": {
-    "test":"jest",
+    "test": "jest",
     "sass": "sass --watch ./scss/main.scss:style.css --style compressed"
   },
   "author": "Maxime Lorin",
   "license": "ISC",
   "devDependencies": {
     "jest": "^26.6.3"
+  },
+  "dependencies": {
+    "node-fetch": "^2.6.1"
   }
 }
